@@ -1,3 +1,8 @@
+2003-07-15  Don Porter  <dgp@users.sourceforge.net>
+
+	* generic/tclCompCmds.c (TclCompileIfCmd):  Prior fix of Bug 711371
+	on 2003-04-07 introduced a buffer overflow.  Corrected.  [Bug 771613]
+
 2003-07-15  Donal K. Fellows  <fellowsd@cs.man.ac.uk>
 
 	* generic/tclCmdIL.c (SortCompare): Cleared up confusing error
